# Capstone_Team15

./: .gitignore  Okcupid Data Cluster and Text.ipynb  README.md  main.py  pyproject.toml  requirements.txt
Analysis/: Okcupid Data Cluster and Text.ipynb  homophily_vs_latent_analysis.py
EDA/: eda.txt
Model/: match_model.joblib  predictivemodelsupervisedlearning.py
dashboard/backend/: predictiveDashboard.py
data/: Columbia_filtered.csv  combined_dataset_matching_features.csv  hCMST_Wave1_Features.csv  hCMST_filtered.csv
docs/: OKCupid Data Dictionary.xlsx  Stanford HCMST - Data Dictionary.xlsx
eda/: eda.txt
preprocessing/: columbia_preprocessing.ipynb  combining_datasets.ipynb  preprocessing.txt  stanford_dataset_Preprocessing.ipynb
src/backend/: backend.md
src/frontend/: frontend.md
unsupervised/: unsupervised_learning.txt
